--- a/09-v-model的使用/05-v-model结合select类型.html
+++ b/09-v-model的使用/05-v-model结合select类型.html
@@ -7,7 +7,22 @@
 <body>
 
 <div id="app">
-    {{message}}
+    <select name="abc" v-model="fruit">
+        <option value="苹果">苹果</option>
+        <option value="香蕉">香蕉</option>
+        <option value="榴莲">榴莲</option>
+        <option value="葡萄">葡萄</option>
+    </select>
+    <h2>您选择的水果是：{{fruit}}</h2>
+    <br>
+    <br>
+    <select name="abc" v-model="fruits" multiple>
+        <option value="苹果">苹果</option>
+        <option value="香蕉">香蕉</option>
+        <option value="榴莲">榴莲</option>
+        <option value="葡萄">葡萄</option>
+    </select>
+    <h2>您选择的水果是：{{fruits}}</h2>
 </div>
 
 <script src = "../vuejs/vue.js"></script>
@@ -15,7 +30,9 @@
     const app = new Vue({
         el: "#app",
         data: {
-            message: "你好啊"
+            message: "你好啊",
+            fruit: "香蕉",
+            fruits: []
         }
     })
 </script>
